--- a/notebooks/GAN_tuning.ipynb
+++ b/notebooks/GAN_tuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e592b3c5",
    "metadata": {
     "ExecuteTime": {
@@ -18,11 +18,11 @@
      "start_time": "2023-12-07T22:02:01.117639Z"
     },
     "execution": {
-     "iopub.execute_input": "2023-12-14T21:52:28.963655Z",
-     "iopub.status.busy": "2023-12-14T21:52:28.962829Z",
-     "iopub.status.idle": "2023-12-14T21:52:28.975788Z",
-     "shell.execute_reply": "2023-12-14T21:52:28.974673Z",
-     "shell.execute_reply.started": "2023-12-14T21:52:28.963606Z"
+     "iopub.execute_input": "2023-12-17T04:24:06.015844Z",
+     "iopub.status.busy": "2023-12-17T04:24:06.015287Z",
+     "iopub.status.idle": "2023-12-17T04:24:06.021446Z",
+     "shell.execute_reply": "2023-12-17T04:24:06.020349Z",
+     "shell.execute_reply.started": "2023-12-17T04:24:06.015796Z"
     },
     "tags": []
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ec5914ce",
    "metadata": {
     "ExecuteTime": {
@@ -42,11 +42,11 @@
      "start_time": "2023-12-07T22:02:01.462746Z"
     },
     "execution": {
-     "iopub.execute_input": "2023-12-14T21:52:28.981256Z",
-     "iopub.status.busy": "2023-12-14T21:52:28.980455Z",
-     "iopub.status.idle": "2023-12-14T21:52:31.538217Z",
-     "shell.execute_reply": "2023-12-14T21:52:31.537269Z",
-     "shell.execute_reply.started": "2023-12-14T21:52:28.981208Z"
+     "iopub.execute_input": "2023-12-17T04:24:06.224919Z",
+     "iopub.status.busy": "2023-12-17T04:24:06.224397Z",
+     "iopub.status.idle": "2023-12-17T04:24:08.763764Z",
+     "shell.execute_reply": "2023-12-17T04:24:08.763021Z",
+     "shell.execute_reply.started": "2023-12-17T04:24:06.224875Z"
     },
     "tags": []
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7ef00443",
    "metadata": {
     "ExecuteTime": {
@@ -72,11 +72,11 @@
      "start_time": "2023-12-07T22:02:02.210431Z"
     },
     "execution": {
-     "iopub.execute_input": "2023-12-14T21:52:31.540020Z",
-     "iopub.status.busy": "2023-12-14T21:52:31.539650Z",
-     "iopub.status.idle": "2023-12-14T21:52:31.560858Z",
-     "shell.execute_reply": "2023-12-14T21:52:31.560428Z",
-     "shell.execute_reply.started": "2023-12-14T21:52:31.540002Z"
+     "iopub.execute_input": "2023-12-17T04:24:08.765453Z",
+     "iopub.status.busy": "2023-12-17T04:24:08.765080Z",
+     "iopub.status.idle": "2023-12-17T04:24:08.786640Z",
+     "shell.execute_reply": "2023-12-17T04:24:08.786200Z",
+     "shell.execute_reply.started": "2023-12-17T04:24:08.765433Z"
     },
     "tags": []
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bb1352f7",
    "metadata": {
     "ExecuteTime": {
@@ -97,11 +97,11 @@
      "start_time": "2023-12-07T22:02:02.235834Z"
     },
     "execution": {
-     "iopub.execute_input": "2023-12-14T21:52:31.561531Z",
-     "iopub.status.busy": "2023-12-14T21:52:31.561369Z",
-     "iopub.status.idle": "2023-12-14T21:52:31.576331Z",
-     "shell.execute_reply": "2023-12-14T21:52:31.575911Z",
-     "shell.execute_reply.started": "2023-12-14T21:52:31.561518Z"
+     "iopub.execute_input": "2023-12-17T04:24:08.787275Z",
+     "iopub.status.busy": "2023-12-17T04:24:08.787126Z",
+     "iopub.status.idle": "2023-12-17T04:24:08.802254Z",
+     "shell.execute_reply": "2023-12-17T04:24:08.801834Z",
+     "shell.execute_reply.started": "2023-12-17T04:24:08.787262Z"
     },
     "tags": []
    },
@@ -110,6 +110,36 @@
     "import scipy.stats as ss\n",
     "import numpy as np\n",
     "from easydict import EasyDict as edict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "146b4b14-84f0-47e3-8d6e-d4f6c932f598",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-17T04:24:30.867170Z",
+     "iopub.status.busy": "2023-12-17T04:24:30.866584Z",
+     "iopub.status.idle": "2023-12-17T04:24:30.902165Z",
+     "shell.execute_reply": "2023-12-17T04:24:30.900921Z",
+     "shell.execute_reply.started": "2023-12-17T04:24:30.867122Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.maximum([1, 3, -1], 2)"
    ]
   },
   {
